minor refactorings and fix styling overlap from sidebar and editor

--- a/add-in/src/editor/editor.module.css
+++ b/add-in/src/editor/editor.module.css
@@ -2,7 +2,6 @@
     margin: 20px;
     height: 80vh;
     background: #fff;
-    width: 816px;
     color: #000;
     position: relative;
     line-height: 20px;
